[gd_scene load_steps=3 format=3 uid="uid://dn3ifpgx4o83l"]

[ext_resource type="Script" uid="uid://dtn01exxhmfny" path="res://scenes/clicking_manager.gd" id="1_c07ay"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_15rgw"]
size = Vector2(32, 32)

[node name="ClickingManager" type="Area2D"]
script = ExtResource("1_c07ay")

[node name="ClickingCollision" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_15rgw")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
